--- a/index.html
+++ b/index.html
@@ -4,11 +4,144 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pionner-Bank account</title>
+    <!-- title  -->
+    <title>Pionner-Bank Account.</title>
+    <!-- bootstrap cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- css style  -->
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
+    <!-- main div  -->
+    <div id="login-area">
+        <!-- banner -->
+        <h1 class="text-center">Welcome to Pionner-Bank</h1>
+        <!-- login form  -->
+        <div class="submit-area">
+            <h4>Login</h4>
+            <input type="text" class="form-control" placeholder="Enter Your Email">
+            <br>
+            <input type="password" class="form-control" placeholder="Password">
+            <br>
+            <button id="login" class="btn btn-success"><span class="text-white">Enter</span></button>
+        </div>
+    </div>
+    <!-- transaction area  -->
+    <div id="transaction-area">
+        <!-- counter -->
+        <div class="row">
+            <!-- Deposit  -->
+            <div class="col-md-4">
+                <div class="Deposit status">
+                    <h5>Deposit</h5>
+                    <h3>$ <span id="currentDeposit">00</span></h3>
+                </div>
+            </div>
+            <!-- withdraw  -->
+            <div class="col-md-4">
+                <div class="Withdraw status">
+                    <h5>Withdraw</h5>
+                    <h3>$ <span id="currentWithdraw">00</span></h3>
+                </div>
+            </div>
+            <!-- balance  -->
+            <div class="col-md-4">
+                <div class="Balance status">
+                    <h5>Balance</h5>
+                    <h3>$ <span id="currentBalance">1240</span></h3>
+                </div>
+            </div>
+        </div>
+        <!-- counter end -->
+        <!-- another card -->
+        <div class="row">
+            <!-- Deposit status  -->
+            <div class="col-md-6">
+                <div class="submit-area">
+                    <h4>Deposit</h4>
+                    <input id="depositAmount" type="text" class="form-control"
+                        placeholder="$amount you want to deposit">
+                    <br>
+                    <button id="addDeposit" class="btn btn-success">Deposit</button>
+                </div>
+            </div>
+            <!-- Withdraw status  -->
+            <div class="col-md-6">
+                <div class="submit-area">
+                    <h4>Withdraw</h4>
+                    <input id="withdrawAmount" type="text" class="form-control"
+                        placeholder="$amount you want to withdraw">
+                    <br>
+                    <button id="addWithdraw" class="btn btn-success">Withdraw</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- transaction area end -->
+    <!-- main div end -->
 
+
+
+
+    <!-- script tag -->
+    <script>
+        // loginBtn evnet handler!
+        var loginBtn = document.getElementById('login');
+        loginBtn.addEventListener('click', function () {
+            const loginArea = document.getElementById('login-area');
+            loginArea.style.display = 'none';
+            const transactionArea = document.getElementById('transaction-area');
+            transactionArea.style.display = 'block';
+
+        })
+        // diposit button event handler
+        const depositBtn = document.getElementById('addDeposit');
+        depositBtn.addEventListener('click', function () {
+            const depositNum = getInputNumber('depositAmount')
+
+
+            updateSpanText('currentBalance', depositNum);
+            updateSpanText('currentDeposit', depositNum);
+
+
+            document.getElementById('depositAmount').value = "";
+
+        })
+        // function 
+        function updateSpanText(id, depositNum) {
+            const current = document.getElementById(id).innerText;
+            const currentNum = parseFloat(current);
+            const total = currentNum + depositNum;
+            document.getElementById(id).innerText = total;
+        }
+
+        // withdraw button event handler 
+        const withdrawBtn = document.getElementById('addWithdraw');
+        withdrawBtn.addEventListener('click', function () {
+            const withdrawNum = getInputNumber('withdrawAmount')
+
+
+            updateSpanText('currentWithdraw', withdrawNum);
+            updateSpanText('currentBalance', -1 * withdrawNum)
+
+
+
+            document.getElementById('withdrawAmount').value = "";
+        })
+        // return function 
+        function getInputNumber(id) {
+            const amount = document.getElementById(id).value;
+            const amountNumber = parseFloat(amount);
+            return amountNumber;
+        }
+
+
+
+    </script>
+    <!-- script tag end -->
 </body>
 
 </html>
